refactor(i18n): 使用国际化文本替换平台描述
- 将 Discord、Notion 和 Telegram 平台的描述文本改为从国际化资源中获取
- 在英文和中文语言包中添加对应平台描述的翻译条目
- 在 Vue 组件中使用 t 函数进行描述文本的国际化处理
- 保证各平台描述显示内容支持多语言切换

--- a/lib/i18n/locales/en-US.json
+++ b/lib/i18n/locales/en-US.json
@@ -37,6 +37,17 @@
     "platformsSuccess": "platforms",
     "noPageInfo": "Unable to get current page information"
   },
+  "platforms": {
+    "telegram": {
+      "description": "Send messages to Telegram channels or groups via Bot API"
+    },
+    "discord": {
+      "description": "Send messages to Discord channels via Webhook"
+    },
+    "notion": {
+      "description": "Save content to Notion database"
+    }
+  },
   "options": {
     "title": "Clipper Hub - Settings",
     "platformManagement": "Platform Management",
